[plugins] PluginNode used instead of raw IdeaPluginDescriptor
GitOrigin-RevId: e1def319e0e3351e302012770160565b8987adbb